# wordcloud_cli

./: README.md  example.py  texts.py
wordcloud-cli-for-japanese/: pyproject.toml
wordcloud-cli-for-japanese/src/wordcloud_cli_for_japanese/: core.py  stopwords.py  wordcloud_app.py
wordcloud-cli-for-japanese/src/wordcloud_cli_for_japanese/data/: sample.txt
wordcloud-cli-for-japanese/tests/: test_wordcloud_cli_for_japanese.py
